mise a jour mojito

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <span></span>
                 </div>
 
-                <div><img id="Mojito" src="../images/Mojito.jpg" ></div>
+                <div><img id="Mojito" src="images/Mojito.jpg" ></div>
 
             </div>
 
